[package]
name = "http-proxy"
version = "0.1.0"
authors = ["Nikolay Kim <fafhrd91@gmail.com>"]
workspace = "../"

[[bin]]
name = "proxy"
path = "src/main.rs"

[[bin]]
name = "proxy-example-server"
path = "src/server.rs"

[dependencies]
env_logger = "0.5"
openssl = { version="0.10" }
futures = "0.1"

actix = "0.7"
actix-web = { version = "^0.7", features=["ssl"] }
